# normalize-pixelart

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: gen_test_image.rs
pixfix/: Cargo.toml  tauri.conf.json
pixfix/src/: lib.rs  main.rs
pixfix/ui/: app.js  index.html  style.css
pixfix/ui/src/: app.ts
src/: batch.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  spritesheet.rs
src/color/: kmeans.rs  lospec.rs  mod.rs  oklab.rs  palette_match.rs  palettes.rs
src/image_util/: histogram.rs  io.rs  mod.rs  neighbors.rs
src/pipeline/: aa_removal.rs  background.rs  downscale.rs  grid_detect.rs  mod.rs  quantize.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
