[package]
name = "normalize-pixelart"
version = "0.1.0"
edition = "2021"
description = "Normalize AI-generated pixel art into clean, grid-aligned game assets"
license = "MIT"

[dependencies]
# Image I/O and manipulation
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }

# Color science
palette = { version = "0.7", features = ["std"] }

# CLI
clap = { version = "4", features = ["derive", "wrap_help"] }

# Random (for k-means initialization)
rand = "0.8"

# Parallelism
rayon = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
