[package]
name = "pixfix"
version = "0.1.0"
edition = "2021"
description = "Desktop pixel art normalizer — Tauri frontend for normalize-pixelart"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
normalize-pixelart = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
base64 = "0.22"
